--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -4,7 +4,7 @@
 <meta charset=”utf-8”>
 
 
-<title>http://www.berkshirehathaway.com/</title>
+<title>BERKSHIRE HATHAWAY INC.</title>
 <header>
 <h1>BERKSHIRE HATHAWAY INC.</h1>
 <p>3555 Farnam Street</p>
