Add comments back in after accidentally deletion

--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -79,5 +79,28 @@ Copyright © 1978-2015 Berkshire Hathaway Inc.
 </div>
 
 </body>
-</div>    
+</div> 
+
+<!--
+<br>
+- What was it like to translate your previous learning with HTML into an actual site?
+<br>
+It was relatively easy as the webpage was simple, but it still required attention to detail and a commitment to following the challenge's instructions
+<br>
+- How was it researching and using semantic HTML5 elements?
+<br>
+Most of the semantic elements are widely available on the web; the key was to agree on the tags to use for each segment of the webpage
+<br>
+- How did you do at keeping to best practices (i.e. no formatting in the HTML)
+<br>
+The desire to come up with the prettiest approximation of the original site was strong, but we tried our best to keep within the instructions given in the exercise. For instance, we refrained from styling HTML directly.
+<br>
+- What seems good and bad about HTML?
+<br>
+HTML is a quick and easy way to do the basic formatting of website information. However, it is very hard to do any kind of styling in HTML. It is also prone to errors because some tags require a tag to open and close, while other tags require only a tag to open. This makes it hard to check whether all the appropriate tags have been closed.
+<br>
+- What tricks do you have for remembering how to write HTML?
+<br>
+Thinking about exactly what I want to do helps. For example, if I am inserting an image, I need to find the source of the image to insert that image. In other words, I need the image source or `img src`. Thinking about the HTML file as a body also helps me remember where to put different kinds of information (e.g. head => header, body, foot => footer).
+-->   
 </html>
