--- a/week-3/dissect-me.html
+++ b/week-3/dissect-me.html
@@ -82,4 +82,4 @@
 
 	What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date? What about research some shortcuts that already exist?
 
-	I like that snippets can be created. It's a handy tool to quickly put down a framework for an HTML page. I think it'll come in handy in the future too when we start programming in more languages (e.g. Ruby, Javascript, etc.). I like using the [ctrl + d] shortcut to select an entire word. I also use [ctrl + /] to effectily comment easily. Lastly [Alt +] is great for closing the current html tag.
+	I like that snippets can be created. It's a handy tool to quickly put down a framework for an HTML page. I think it'll come in handy in the future too when we start programming in more languages (e.g. Ruby, Javascript, etc.). I like using the [ctrl + d] shortcut to select an entire word. I also use [ctrl + /] to effectily comment easily. Lastly [Alt +] is great for closing the current html tag.-->
