--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -276,6 +276,16 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- 
+  Did you feel more confident with CSS positioning? 
+
+  I did feel more confident with CSS positioning. It helped to talk every step out because it gave me a better understanding of exactly what I was modifying. I also got a refresher on positioning and how parent/child/sibling relationships work in CSS.
+
+
+  How did you do with the learning competencies in general? 
+
+  I think I did pretty well. I'd done a similar layout for my personal website so I was already familiar with getting a two column layout to work. Additionally, I was able to pick up a couple of new stylings that I will use (such as 'clear' which will help me manipulate the placement of text and imagees relative to elements that have a float property).
+
+-->
   </body>
 </html>
