Write kick and punch functions for game

--- a/week-7/game.html
+++ b/week-7/game.html
@@ -10,7 +10,7 @@
 <body>
 	<h3>Stick Fighter Demo Game</h3>
 	<div class="level">
-		<div class="hero"></div>
+		<div id="hero"></div>
 	</div>
 </body>
 </html>
