Add health bar feature

--- a/week-7/game.html
+++ b/week-7/game.html
@@ -12,5 +12,8 @@
 	<div class="level">
 		<div id="hero"></div>
 	</div>
+	<p>Hero Health Bar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Enemy Health Bar</p>
+	<progress id="healthHero" value="100" max="100"></progress>
+	<progress id="healthEnemy" value="1000" max="1000"></progress>
 </body>
 </html>
