Animate punching bag

--- a/week-7/game.html
+++ b/week-7/game.html
@@ -9,8 +9,10 @@
 
 <body>
 	<h3>Stick Fighter Demo Game</h3>
+	<!--<canvas id="canvas"></canvas>-->
 	<div class="level">
 		<div id="hero"></div>
+		<div id="punchingBag"></div>
 	</div>
 	<p>Hero Health Bar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Enemy Health Bar</p>
 	<progress id="healthHero" value="100" max="100"></progress>
