Reflect on game

--- a/week-7/game.html
+++ b/week-7/game.html
@@ -17,5 +17,9 @@
 	<p>Hero Health Bar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Enemy Health Bar</p>
 	<progress id="healthHero" value="100" max="100"></progress>
 	<progress id="healthEnemy" value="1000" max="1000"></progress>
+	<p>To kick the punching bag press <strong>CTRL</strong>.</p>
+	<p>To punch the punching bag press <strong>ALT</strong>.</p>
+	<p>To use a sword on the punching bag press <strong>z</strong></p>
+	<p><em>Note: Between kicks and punches you may have to click inside the background in order for keyboard presses to be recognized.</em></p>
 </body>
 </html>
