--- a/week-9/dom-manipulation/home-page.html
+++ b/week-9/dom-manipulation/home-page.html
@@ -28,5 +28,5 @@
 </body>
 </html>
 
-<!-- Add your reflection here -->
-<!-- # This challenge took me [#] hours. -->
+<!-- Reflection in the JS file -->
+<!-- # This challenge took me [1] hours. -->
